--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-color: #666262;
     margin-top: 20px;
     text-align: center;
+    font-family: 'Unica One', monospace;
 }
 #Timer{
     color: #ffffff;
